# buster-ripper

./: README.md  buster_ripper.py  buster_ripper_legacy.py  pyproject.toml  serve_buster_ripper.sh
buster_ripper/: __init__.py  app.py  compaction.py  config.py  dump.py  main.py  normalize.py  session.py  utils.py
buster_ripper/routes/: chat.py  count_tokens.py  messages.py  passthrough.py
docs/: eval.md
tests/: conftest.py  test_compaction.py  test_normalize.py  test_session_stats.py
